Author added to config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ title: 'Unfamiliar Places'
 url: 'https://unfamiliarplaces.net'
 name: 'Unfamiliar Places'
 description: 'Travel Journal of Dani and Andrew'
+author: Andrew & Dani Wise
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: UnfamiliarPl
 
