Instgram added, Twitter removed

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: 'Travel Journal of Dani and Andrew'
 author: Andrew & Dani Wise
 baseurl: "" # the subpath of your site, e.g. /blog
 email: andrew@andrewise.co.uk
-twitter_username: UnfamiliarPl
+instagram_username: _wisey_
 google_analytics: G-LTENRT9XKJ
 
 # Build settings
